--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "The Crimson Scholar"
 description: |
-  On Solo Roleplaying & thinking about Solo Roleplaying
+  On solo roleplaying & random musings
 site: distill::distill_website
 ---
 
